# FSRCNN

./: .gitattributes  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  train.py
app/api/: app.py  utilities.py
app/api/models/: FSRCNN_2s_10e_1b_0.2.0.pth  FSRCNN_3s_10e_1b_0.2.0.pth  FSRCNN_4s_10e_1b_0.2.0.pth
app/api/templates/: result.html
data/: dataset.py  helpers.py
fsrcnn/: __init__.py  model.py
utils/: models.py
