[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "fsrcnn"
version = "0.2.0"
description = "PyTorch implementation of FSRCNN (Accelerating the Super-Resolution Convolutional Neural Network)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "torch>=2.1",
    "torchvision>=0.16",
]

[tool.setuptools.packages.find]
include = ["fsrcnn*"]
